--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Randika | Cybersecurity Portfolio</title>
+  <title>Portfolio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Cybersecurity portfolio of Randika - Bug hunting, system security, and ethical hacking">
   
@@ -380,4 +380,5 @@ setInterval(drawMatrix, 80);
 </script>
 
 </body>
+
 </html>
