--- a/index.html
+++ b/index.html
@@ -233,21 +233,21 @@ I work ethically, chasing understanding.
         <i class="fab fa-telegram"></i>
         <div>
           <h3>Telegram</h3>
-          <a href="https://t.me/randika.xyz" target="_blank">@randika.xyz</a>
+          <a href="https://t.me/randikaxyz_bot" target="_blank">@randikaxyz_bot</a>
         </div>
       </div>
       <div class="contact-item">
         <i class="fab fa-whatsapp"></i>
         <div>
           <h3>WhatsApp</h3>
-          <a href="https://wa.me/94728914194" target="_blank">+94 72 891 4194</a>
+          <a href="https://wa.me/+16469458569" target="_blank">+1 646 945 8569</a>
         </div>
       </div>
       <div class="contact-item">
         <i class="fas fa-envelope"></i>
         <div>
           <h3>Email</h3>
-          <a href="mailto:randika.xyz@gmail.com">randika.xyz@gmail.com</a>
+          <a href="mailto:randika.xyz@gmail.com">randika.xyz@proton.me</a>
         </div>
       </div>
       <div class="contact-item">
@@ -382,3 +382,4 @@ setInterval(drawMatrix, 80);
 </body>
 
 </html>
+
