--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@ I work ethically, chasing understanding.
         <span class="edu-status">Completed</span>
       </div>
       <div class="edu-item">
-        <h3><i class="fas fa-university"></i> Foundation – IJSE</h3>
+        <h3><i class="fas fa-university"></i> Foundation </h3>
         <span class="edu-status">Completed</span>
       </div>
       <div class="edu-item">
@@ -382,4 +382,5 @@ setInterval(drawMatrix, 80);
 </body>
 
 </html>
+
 
