--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
         </p>
         
         <div class="contact-buttons">
-          <a href="https://t.me/randika.xyz" class="contact-btn telegram" target="_blank" rel="noopener">
+          <a href="https://t.me/randikaxyz_bot" class="contact-btn telegram" target="_blank" rel="noopener">
             <i class="fab fa-telegram"></i> Telegram
           </a>
-          <a href="https://wa.me/94728914194" class="contact-btn whatsapp" target="_blank" rel="noopener">
+          <a href="https://wa.me/+16469458569" class="contact-btn whatsapp" target="_blank" rel="noopener">
             <i class="fab fa-whatsapp"></i> WhatsApp
           </a>
         </div>
@@ -382,5 +382,6 @@ setInterval(drawMatrix, 80);
 </body>
 
 </html>
+
 
 
