--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Portfolio</title>
+  <title>Home | Portfolio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Cybersecurity portfolio of Randika - Bug hunting, system security, and ethical hacking">
   
@@ -108,15 +108,14 @@
       <div class="typing-area">
         <div id="typing-text"></div>
         <div id="typing-source" style="display: none;">
-I'm Randika, 17 years old, focused on cybersecurity and system analysis. 
+I'm Randika, 17 years old Pythonist, focused on cybersecurity and system analysis. 
 I don't aim to be known — I aim to be effective.
 
 Cybersecurity is not just my interest, it's my instinct. 
 I look at systems asking "where is the weakness?" and "what did everyone miss?".
 
 I work like a hunter — testing, repeating — until a bug shows itself. 
-I work ethically, chasing understanding.
-        </div>
+I work ethically, chasing understanding.</div>
       </div>
       <div class="about-stats">
         <div class="stat-item">
@@ -246,7 +245,7 @@ I work ethically, chasing understanding.
         <i class="fas fa-envelope"></i>
         <div>
           <h3>Email</h3>
-          <a href="mailto:randika.xyz@gmail.com">randika.xyz@proton.me</a>
+          <a href="mailto:randika.xyz@proton.me">randika.xyz@proton.me</a>
         </div>
       </div>
       <div class="contact-item">
@@ -381,6 +380,7 @@ setInterval(drawMatrix, 80);
 </body>
 
 </html>
+
 
 
 
