--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <a href="https://t.me/randikaxyz_bot" class="contact-btn telegram" target="_blank" rel="noopener">
             <i class="fab fa-telegram"></i> Telegram
           </a>
-          <a href="https://wa.me/+16469458569" class="contact-btn whatsapp" target="_blank" rel="noopener">
+          <a href="https://wa.me/" class="contact-btn whatsapp" target="_blank" rel="noopener">
             <i class="fab fa-whatsapp"></i> WhatsApp
           </a>
         </div>
@@ -238,7 +238,7 @@ I work ethically, chasing understanding.</div>
         <i class="fab fa-whatsapp"></i>
         <div>
           <h3>WhatsApp</h3>
-          <a href="https://wa.me/+16469458569" target="_blank">+1 646 945 8569</a>
+          <a href="https://wa.me/" target="_blank"></a>
         </div>
       </div>
       <div class="contact-item">
@@ -380,6 +380,7 @@ setInterval(drawMatrix, 80);
 </body>
 
 </html>
+
 
 
 
