--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <a href="https://t.me/randikaxyz_bot" class="contact-btn telegram" target="_blank" rel="noopener">
             <i class="fab fa-telegram"></i> Telegram
           </a>
-          <a href="https://wa.me/+94728914194" class="contact-btn whatsapp" target="_blank" rel="noopener">
+          <a href="https://wa.me/" class="contact-btn whatsapp" target="_blank" rel="noopener">
             <i class="fab fa-whatsapp"></i> WhatsApp
           </a>
         </div>
@@ -380,6 +380,7 @@ setInterval(drawMatrix, 80);
 </body>
 
 </html>
+
 
 
 
